tests/negative/throw_value_uncaught.spk
; An uncaught exception carrying a value reports as Kind: Value.
(throw MY_ERROR "boom")
